--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>Quais as formas de ingresso na graduação na UFT?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1282,7 +1282,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>Quais os cursos de graduação oferecidos pela UFT?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1294,7 +1294,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>É preciso pagar para estudar na UFT?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1306,7 +1306,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>Como se preparar para a UFT?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1318,7 +1318,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>A UFT tem algum cursinho pré-vestibular?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1330,7 +1330,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>O candidato pode ocupar vagas obtidas em mais de um processo seletivo de ingresso?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1342,7 +1342,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>Onde está localizado o ordenamento dos chamamentos da UFT?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1354,7 +1354,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>Quanto é a mensalidade da UFT na graduação?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1388,7 +1388,7 @@
           <div class="accordion active">
             <div class="accordion-heading">
               <h3>Qual o período de inscrições no Vestibular 2023?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1400,7 +1400,7 @@
           <div class="accordion">
             <div class="accordion-heading">
               <h3>Como é o vestibular da UFT 2023?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1412,7 +1412,7 @@
           <div class="accordion">
             <div class="accordion-heading">
               <h3>Quando e como será o Vestibular 2023?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1424,7 +1424,7 @@
           <div class="accordion">
             <div class="accordion-heading">
               <h3>Qual o período de solicitação de isenção do valor de inscrição no Vestibular 2023?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1436,7 +1436,7 @@
           <div class="accordion">
             <div class="accordion-heading">
               <h3>Quais são as leituras Obrigatórias do Vestibular 2023?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1448,7 +1448,7 @@
           <div class="accordion">
             <div class="accordion-heading">
               <h3>O que são as provas de habilitação específica do Vestibular 2023?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1460,7 +1460,7 @@
           <div class="accordion">
             <div class="accordion-heading">
               <h3>Quais são os cursos mais concorridos do Vestibular?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1472,7 +1472,7 @@
           <div class="accordion">
             <div class="accordion-heading">
               <h3>Como é calculada a pontuação do candidato no vestibular?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1484,7 +1484,7 @@
           <div class="accordion">
             <div class="accordion-heading">
               <h3>A UFT possui Vestibular de Inverno?</h3>
-              <i class="fas fa-angle-down"></i>
+              <ion-icon name="chevron-up-outline"></ion-icon>
             </div>
             <p class="accordion-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1518,7 +1518,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>Como funciona o SiSu?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1530,7 +1530,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>Quando acontecce a seleção para o SiSu?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1542,7 +1542,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>Quantas vagas a UFT oferece para ingresso via SiSu?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1554,7 +1554,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>Onde ocultar cursos e vagas ofertadas pelo SiSu?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1566,7 +1566,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>Como o candidato aprovado no SiSu faz o primeiro acesso no Portal do Cnadidato da UFT?</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1600,7 +1600,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1612,7 +1612,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1646,7 +1646,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1658,7 +1658,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1692,7 +1692,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1704,7 +1704,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1738,7 +1738,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1750,7 +1750,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1784,7 +1784,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1796,7 +1796,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1830,7 +1830,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1842,7 +1842,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1876,7 +1876,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1888,7 +1888,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1922,7 +1922,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1934,7 +1934,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1968,7 +1968,7 @@
         <div class="accordion active">
           <div class="accordion-heading">
             <h3>accordion heading 01</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
@@ -1980,7 +1980,7 @@
         <div class="accordion">
           <div class="accordion-heading">
             <h3>accordion heading 02</h3>
-            <i class="fas fa-angle-down"></i>
+            <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
