--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao seu ingresso na <span
               class="text-brand">graduação</span></h1>
           <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Como entrar na UFT</h4>
-          <div data-aos="fade-up" data-aos-delay="200"><a href="#Login no GitHub" class="btn btn-brand">Vamos lá!</a>
+          <div data-aos="fade-up" data-aos-delay="200"><a href="#Principais Perguntas" class="btn btn-brand">Vamos ver!</a>
           </div>
         </div>
       </div>
