alteração na página

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
           <h1 class="display-2 fw-bold" data-aos="fade-up">Bem vindo ao seu ingresso na <span
               class="text-brand">graduação</span></h1>
           <h4 data-aos="fade-up" data-aos-delay="100" class="mt-3 mb-5">Como entrar na UFT</h4>
-          <div data-aos="fade-up" data-aos-delay="200"><a href="#Principais Perguntas" class="btn btn-brand">Vamos ver!</a>
+          <div data-aos="fade-up" data-aos-delay="200"><a href="#Principais Perguntas" class="btn btn-brand">Vamos
+              ver!</a>
           </div>
         </div>
       </div>
@@ -281,7 +282,8 @@
             Biblioteconomia )<br><br>
 
             <b>Indígenas</b> – Processo seletivo específico para indígenas, em sua primeira
-            graduação. As vagas são decididas em comum acordo com a comunidade indígena. Mais informações <b>aqui</b>.<br><br>
+            graduação. As vagas são decididas em comum acordo com a comunidade indígena. Mais informações
+            <b>aqui</b>.<br><br>
 
             <b>Refugiados</b> - São oferecidas vagas para pessoas em situação de refúgio em
             alguns cursos de graduação. O edital de abertura de inscrições para o processo seletivo é divulgado neste
@@ -290,18 +292,20 @@
             Para quem já é aluno de graduação, existe o sistema de ocupação de vagas ociosas:<br><br>
 
             <b>Transferência Voluntária</b> - para alunos de outras IES que já tenham
-            integralizado os dois primeiros semestres completos no curso de origem. Mais informações <b>aqui</b>.<br><br>
+            integralizado os dois primeiros semestres completos no curso de origem. Mais informações
+            <b>aqui</b>.<br><br>
 
             <b>Transferência Interna</span> - para alunos da UFRGS que querem mudar de curso
-            através de recálculo da média do SiSU ou do CV. A troca de curso por essa modalidade não está disponível
-            para estudantes de transferência voluntária ou ingresso de diplomado. Acesse <b>aqui</b> outras informações.<br><br>
+              através de recálculo da média do SiSU ou do CV. A troca de curso por essa modalidade não está disponível
+              para estudantes de transferência voluntária ou ingresso de diplomado. Acesse <b>aqui</b> outras
+              informações.<br><br>
 
-            <b>Ingresso de Diplomado</b> - para portadores de diploma de curso superior. Mais
-            informações <b>aqui</b>.<br><br>
+              <b>Ingresso de Diplomado</b> - para portadores de diploma de curso superior. Mais
+              informações <b>aqui</b>.<br><br>
 
-            <b>Programa de Estudante Convênio da Graduação (PEC-G)</b> - gerido pelo Ministério
-            de Relações Exteriores, destinado a cidadãos de países em desenvolvimento com os quais o Brasil mantém
-            acordos educacionais e culturais. Acesse <b>aqui</b> mais informações.
+              <b>Programa de Estudante Convênio da Graduação (PEC-G)</b> - gerido pelo Ministério
+              de Relações Exteriores, destinado a cidadãos de países em desenvolvimento com os quais o Brasil mantém
+              acordos educacionais e culturais. Acesse <b>aqui</b> mais informações.
 
           </p>
         </div>
@@ -718,7 +722,7 @@
 
         <div class="accordion active">
           <div class="accordion-heading">
-            <h3>accordion heading 01</h3>
+            <h3>Quem pode concorrer a uma vaga destinada a pretos, pardos e indígenas?</h3>
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
@@ -730,7 +734,55 @@
 
         <div class="accordion">
           <div class="accordion-heading">
-            <h3>accordion heading 02</h3>
+            <h3>O que é a Autodeclaaração Étnico-Racial?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Como fico sabendo quando será a minha sessão de verificação da autodeclaração étnico-racial?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Qual a metodologia da Comissão permanente de verificação?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Se o candidato for Não Homologado na Verificação Presencial, é possível recorrer?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Como é composta a Comissão Permanente de Verificação das Autodeclarações Étnico-Raciais?</h3>
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
@@ -764,7 +816,7 @@
 
         <div class="accordion active">
           <div class="accordion-heading">
-            <h3>accordion heading 01</h3>
+            <h3>Onde são divulgados os resultados dos processos seletivos?</h3>
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
@@ -776,7 +828,104 @@
 
         <div class="accordion">
           <div class="accordion-heading">
-            <h3>accordion heading 02</h3>
+            <h3>Como acessar a lista de resultados por ordem de classificação?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>Onde consultar a nota de redação do Vestibular?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Como saber em que semestre o canditado iniciará as aulas?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>O que é o chamamento para vagas remanescentes?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Como são divulgados os chamamentos?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>O que gera um novo chamamento?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Como ocorrem os chamaentos para candidatos do SiSu?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>Quantos chamamentos são feitos pela UFRGS?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Se o candidato não enviar os documentos no prazo especificado no seu edital de chamamento poderá ser
+              convocado novamente, em novo chamamento?</h3>
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
@@ -948,7 +1097,7 @@
 
         <div class="accordion active">
           <div class="accordion-heading">
-            <h3>accordion heading 01</h3>
+            <h3>Depois de fazer a matrícula, qual o proximo passo?</h3>
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
@@ -960,7 +1109,67 @@
 
         <div class="accordion">
           <div class="accordion-heading">
-            <h3>accordion heading 02</h3>
+            <h3>Qual a orientação da UFT sobre o trote?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>O que a UFT oferece aos alunos?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>Como informar-se sobre ofertas de bolsas na UFT?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>Onde consultar os eventos culturais da Universidade?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>Como localizar-se nos prédios da UFT?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion active">
+          <div class="accordion-heading">
+            <h3>Quais as orientações que a UFT dáa aos calouros?</h3>
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
@@ -994,7 +1203,7 @@
 
         <div class="accordion active">
           <div class="accordion-heading">
-            <h3>accordion heading 01</h3>
+            <h3>O que é a confirmação de interesse em vaga?</h3>
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
@@ -1006,7 +1215,80 @@
 
         <div class="accordion">
           <div class="accordion-heading">
-            <h3>accordion heading 02</h3>
+            <h3>Como os documentos devem ser enviados para a confirmação de interesse?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Como saberei que meu interesse foi registrado?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Meu curso tem ingresso apenas no primeiro semestre. Devo confirmar interesse mesmo assim?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Minha confirmação de interesse garante vaga?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Estou aguardando vaga em mais de um processo seletivo (Vestibular e SiSu, por exemplo). Como fazer na
+              confirmação de interesse?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Após o registro de confirmação de interesse, o que devo fazer?</h3>
+            <ion-icon name="chevron-up-outline"></ion-icon>
+          </div>
+          <p class="accordion-content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae vel adipisci voluptas ut deserunt magnam
+            tempora esse, necessitatibus sit soluta minima quos atque porro, explicabo saepe expedita quibusdam
+            consectetur? Nemo!
+          </p>
+        </div>
+
+        <div class="accordion">
+          <div class="accordion-heading">
+            <h3>Não tenho interesse na vaga, o que devo fazer?</h3>
             <ion-icon name="chevron-up-outline"></ion-icon>
           </div>
           <p class="accordion-content">
